--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "n8nNodesApiVersion": 1,
     "credentials": [],
     "nodes": [
-      "dist/nodes/FirebaseCloudMessaging/FirebaseCloudMessaging.node.js"
+      "dist/nodes/GoogleFirebaseCloudMessaging/GoogleFirebaseCloudMessaging.node.js"
     ]
   },
   "devDependencies": {
@@ -45,5 +45,6 @@
     "prettier": "^2.7.1",
     "tslint": "^6.1.2",
     "typescript": "~4.6.0"
-  }
+  },
+  "dependencies": {}
 }
