--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
   ],
   "n8n": {
     "n8nNodesApiVersion": 1,
-    "credentials": [],
+    "credentials": [
+      "dist/credentials/GoogleFirebaseCloudMessagingOAuth2Api.credentials.js"
+    ],
     "nodes": [
       "dist/nodes/GoogleFirebaseCloudMessaging/GoogleFirebaseCloudMessaging.node.js"
     ]
